src/examples/errors/20_array_negative_index.veri
// Error: Array index may be negative
// Expected error: E008 - Invalid array access

fn main() {
    let arr: [int; 5] = [0; 5];
    let x: int = arr[0 - 1];  // -1 is negative
}
